Got the NJ boundary geojson to load on the map

--- a/web-display/maps/templates/default.html
+++ b/web-display/maps/templates/default.html
@@ -61,18 +61,19 @@
             mapReset();
             map.addSource("NJ", {
                 type: "geojson",
-                data: 'https://raw.githubusercontent.com/zstatmanweil/EJ-analysis-map/web/web-display/maps/data/NJ_boundary.json'
+                data: 'https://raw.githubusercontent.com/zstatmanweil/EJ-analysis-map/web/web-display/maps/data/NJ_boundary.geojson'
                 });
 
             map.addLayer({
-               id: 'new_jersey',
-               type: 'fill',
-               source: 'NJ', 
-               layout: {}
-               paint: {
-                    fill-color:'#088'
+               'id': 'new_jersey',
+               'type': 'fill',
+               'source': 'NJ', 
+               'layout': {},
+               'paint': {
+                    'fill-color':'#088',
+                    'fill-opacity':0.8
                 }
-           })
+           });
         });    
         </script>
 	</body>
