--- a/web-display/templates/main.html
+++ b/web-display/templates/main.html
@@ -2,8 +2,13 @@
 <html>
 	<head>
 		<title>Spatial environmental justice analysis</title>
+		<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 		<script src='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
 		<link href='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+		<style>
+			body { margin:0; padding:0; }
+			#map { position:absolute; top:105px; bottom:275px; width:100%; }
+		</style>
     </head>
 
     <body>
@@ -19,6 +24,7 @@
 			padding: 10px;
 			position: absolute;
 			right: 10px;
+			bottom: 300px;
 			z-index: 1;
 			}
 
@@ -33,12 +39,13 @@
 			margin-right: 5px;
 			width: 10px;
 			}
+
 		</style>
 
       <h1>Safe Drinking Water Act (SDWA) Compliance in New Jersey (2012-2016)</h1>
-      <div id='map' style='width: 100%; height: 400px;'></div>
+      <div id='map'></div>
 
-		<div id='all-violations' class='legend'>
+		<div id='all-violations-legend' class='legend'>
 			<h4>SDWA Violations (2012-2016)</h4>
 			<div><span style='background-color: #FFEDA0'></span>5</div>
 			<div><span style='background-color: #FEB24C'></span>15</div>
@@ -73,9 +80,9 @@
         // Initialize map
         var map = new mapboxgl.Map({
 	        container: 'map',
-            style: 'mapbox://styles/mapbox/streets-v11',
+          style: 'mapbox://styles/mapbox/streets-v11',
 	   	    center: [-74.385210, 40.118365], // long, lat
-            zoom: 6.3,
+          zoom: 6.3,
         //    maxBounds: bounds // Sets bounds as max
         });
         // Toggle between styles
@@ -96,6 +103,7 @@
         map.addControl(new mapboxgl.NavigationControl());
         function mapReset() {
         }
+				map.addControl(new mapboxgl.FullscreenControl());
         map.on('style.load', function() {
             mapReset();
 						// Add NJ boundary source
