created a tile layer

--- a/web_app/templates/map.html
+++ b/web_app/templates/map.html
@@ -119,7 +119,7 @@
 						// Add PWS, violation and demographic data source
             map.addSource('aw', {
                 type: 'geojson',
-                data: 'https://raw.githubusercontent.com/zstatmanweil/EJ-analysis-map/master/web_app/data/pws_aw.geojson'
+                data: 'https://raw.githubusercontent.com/zstatmanweil/EJ-analysis-map/master/web_app/data/pws_aw.mbtiles'
                 });
 						// Add NJ boundary layer
             map.addLayer({
