converted county layer to correct coordinate system

--- a/web_app/templates/map.html
+++ b/web_app/templates/map.html
@@ -129,7 +129,7 @@
             });
             // Add PWS, violation and demographic data source
             map.addLayer({
-              'id': 'aw_pws',
+              'id': 'all_violations',
               'type': 'fill',
               "source": {
                 type: 'vector',
