--- a/web_app/templates/map.html
+++ b/web_app/templates/map.html
@@ -2,9 +2,9 @@
 
 {% block head %}
 		<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-		<script src='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
-		<link href='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
-		<style>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+    <style>
 			body {
         margin: 0;
         padding: 0;
@@ -19,129 +19,99 @@
 {% endblock %}
     </head>
 
-{% block body %}
-		<style>
-    #menu {
-      background: #fff;
-      position: absolute;
-      z-index: 1;
-      top: 50pt;
-      left: 10pt;
-      border-radius: 3px;
-      width: 120px;
-      border: 1px solid rgba(0,0,0,0.4);
-      font-family: 'Open Sans', sans-serif;
-      }
+{% block body %} 
+    <style>
+#menu {
+    background: #fff;
+    position: absolute;
+    z-index: 1;
+    top: 50pt;
+    left: 10pt;
+    border-radius: 3px;
+    width: 150px;
+    border: 1px solid rgba(0,0,0,0.4);
+    font-family: 'Open Sans', sans-serif;
+    }
 
-    #menu a {
-      font-size: 13px;
-      color: #404040;
-      display: block;
-      margin: 0;
-      padding: 0;
-      padding: 10px;
-      text-decoration: none;
-      border-bottom: 1px solid rgba(0,0,0,0.25);
-      text-align: center;
-      }
-      
-    #menu a:last-child {
-      border: none;
-      }
+#menu a {
+    font-size: 13px;
+    color: #404040;
+    display: block;
+    margin: 0;
+    padding: 0;
+    padding: 10px;
+    text-decoration: none;
+    border-bottom: 1px solid rgba(0,0,0,0.25);
+    text-align: center;
+    }
     
-    #menu a:hover {
-      background-color: #f8f8f8;
-      color: #404040;
-      }
-    
-    #menu a.active {
-      background-color: #3887be;
-      color: #ffffff;
-      }
-    
-    #menu a.active:hover {
-      background: #3074a4;
-      }
+#menu a:last-child {
+    border: none;
+    }
+  
+#menu a:hover {
+    background-color: #f8f8f8;
+    color: #404040;
+    }
+  
+#menu a.active {
+    background-color: #14a9e0;
+    color: #ffffff;
+    }
+  
+#menu a.active:hover {
+    background:  #14a9e0;
+    /* background: #3074a4; */
+    }
 
-    .feature {
-			background-color: #fff;
-			border-radius: 3px;
-			bottom: 300px;
-			box-shadow: 0 1px 2px rgba(0,0,0,0.10);
-			font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-			padding: 10px;
-			position: absolute;
-			right: 10px;
-			z-index: 1;
-			}
+.map-overlay {
+  position: absolute;
+  right: 10px;
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 3px;
+  padding: 10px;
+  font-family: Arial, sans-serif;
+  overflow: auto;
+  border-radius: 3px;
+  z-index: 1;
+}
 
-		.legend {
-			background-color: #fff;
-			border-radius: 3px;
-			bottom: 30px;
-			box-shadow: 0 1px 2px rgba(0,0,0,0.10);
-			font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-			padding: 10px;
-			position: absolute;
-			right: 10px;
-			z-index: 1;
-			}
-		.legend h4 {
-			margin: 0 0 10px;
-			}
-		.legend div span {
-			border-radius: 50%;
-			display: inline-block;
-			height: 10px;
-			margin-right: 5px;
-			width: 10px;
-			}
-      
+#features {
+  bottom: 300px;
+  font: 20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  }
+
+#legend {
+  background-color: #fff;
+  bottom: 30px;
+  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  }
+
+.legend-key {
+  display: inline-block;
+  border-radius: 20%;
+  width: 10px;
+  height: 10px;
+  margin-right: 5px;
+}      
     </style>
-    <div id='hover' class='feature'>
-			<h4>Hover over a water system!</h2>
+
+    <div class='map-overlay' id='features'>
+			<h6>Hover over a water system!</h6>
     </div>
     
-		<div id='all-violations-legend' class='legend'>
-			<h4>SDWA Violations (2012-2016)</h4>
-			<div><span style='background-color: #FFEDA0'></span>5</div>
-			<div><span style='background-color: #FEB24C'></span>15</div>
-			<div><span style='background-color: #FC4E2A'></span>35</div>
-			<div><span style='background-color: #BD0026'></span>65</div>
-			<div><span style='background-color: #800026'></span>128</div>
-		</div>
+		<div class='map-overlay' id='legend'>
+      <h6>Legend!</h6>
+    </div>
 
     <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v3.1.4/mapbox-gl-geocoder.min.js'></script>
-    <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v3.1.4/mapbox-gl-geocoder.css' type='text/css' />
+    <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v3.1.4/mapbox-gl-geocoder.css' type='text/css' /> 
     <div id='map'></div>
 
     <nav id="menu"></nav>
-    <!-- <div id='style_menu'>
-        <input id='streets-v11' type='radio' name='rtoggle' value='streets' checked='checked'>
-        <label for='streets'>streets</label>
-        <input id='satellite-v9' type='radio' name='rtoggle' value='satellite'>
-        <label for='satellite'>satellite</label>
-    </div> -->
-
         <script>
         mapboxgl.accessToken = 'pk.eyJ1IjoienN0YXRtYW53ZWlsIiwiYSI6ImNqbWY3b3V2cjAyMWUzcXBmNXRzdHNnOWEifQ.E-JUGH3ab30ya_NXealg_A';
 				
-        // Add lists for choropleth
-        var vioColors = ['#FFEDA0',  '#FEB24C',  '#FC4E2A', '#BD0026', '#800026'];
-        var demoColors = ['#d0c2d6',  '#b69bc1',  '#805591', '#501966', '#2a0738']; // update
-        // All violations
-        var vioBreaks = [5, 15, 35, 65, 128];
-        // Health violations
-        var healthVioBreaks = [1, 2, 4, 5, 10]; // need to update
-        // Percent below the poverty line (areal weighting)
-        var percPOCBreaks = [0.12, 0.20, 0.32, 0.54, 0.98];
-        // Percent below the poverty line (areal weighting)
-        var percPovBreaks = [0.05, 0.09, 0.14, 0.24, 0.47];
-        // Percent below the poverty line (county-level analysis)
-        var percPOCBreaksCounty = [20.0, 35.0, 45.0, 55.0, 71.0]; // need to update
-        // Percent below the poverty line (county-level analysis)
-        var percPovBreaksCounty = [6, 9, 12, 14, 17]; // need to update
-
         // Set bounds
         var bounds = [
             [-125.339515, 23.089636], // Southwest Coordinates
@@ -150,22 +120,12 @@
         // Initialize map
         var map = new mapboxgl.Map({
 	        container: 'map',
-          style: 'mapbox://styles/mapbox/streets-v11',
+          style: 'mapbox://styles/mapbox/light-v10',
           center: [-74.385210, 40.118365], // long, lat
           zoom: 7,
         //    maxBounds: bounds // Sets bounds as max
         });
-        
-        // Toggle between styles
-        // var layerList = document.getElementById('style_menu');
-        // var inputs = layerList.getElementsByTagName('input');
-        // function switchLayer(layer) {
-        //     var layerId = layer.target.id;
-        //     map.setStyle('mapbox://styles/mapbox/' + layerId);
-        // }
-        // for (var i = 0; i < inputs.length; i++) {
-        //     inputs[i].onclick = switchLayer;
-        // }
+       
         // Add Geocoder
         map.addControl(new MapboxGeocoder({
             accessToken: mapboxgl.accessToken
@@ -175,7 +135,27 @@
         function mapReset() {
         }
 				map.addControl(new mapboxgl.FullscreenControl());
-        map.on('style.load', function() {
+        map.on('load', function() {
+
+            // Add lists for choropleth
+            var vioColors = ['#FFEDA0',  '#FEB24C',  '#FC4E2A', '#BD0026', '#800026'];
+            var demoColors = ['#d0c2d6',  '#b69bc1',  '#805591', '#501966', '#2a0738']; // update
+            
+            // All violations
+            var vioBreaks = [5, 15, 35, 65, 128];
+            // Health violations
+            var healthVioBreaks = [1, 2, 4, 5, 10]; // need to update
+            // Percent below the poverty line (areal weighting) 
+            var percPOCBreaks = [0.12, 0.20, 0.32, 0.54, 0.98];
+            var percPOCBreaksDisplay = [12, 20, 32, 54, 98];
+            // Percent below the poverty line (areal weighting)
+            var percPovBreaks = [0.05, 0.09, 0.14, 0.24, 0.47];
+            var percPovBreaksDisplay = [5, 9, 14, 24, 47];
+            // Percent below the poverty line (county-level analysis)
+            var percPOCBreaksCounty = [20.0, 35.0, 45.0, 55.0, 71.0]; // need to update
+            // Percent below the poverty line (county-level analysis)
+            var percPovBreaksCounty = [6, 9, 12, 14, 17]; // need to update
+
             mapReset();
 						// Add NJ boundary source
             map.addSource("NJ", {
@@ -192,60 +172,6 @@
                    'line-color': '#070705'
                 }
             });
-            // Add percent below the poverty line (areal weighting)
-            map.addLayer({
-              'id': 'perc_pov_aw',
-              'type': 'fill',
-              "source": {
-                type: 'vector',
-                url: 'mapbox://zstatmanweil.01gjua4s'
-              },
-              'layout': {
-                'visibility': 'none'
-                },
-              "source-layer": "pws_aw",
-                'paint': {
-                     'fill-color': {
-                       'property': 'perc_pov',
-                       'stops': [
-                         [percPovBreaks[0], demoColors[0]],
-                         [percPovBreaks[1], demoColors[1]],
-                         [percPovBreaks[2], demoColors[2]],
-												 [percPovBreaks[3], demoColors[3]],
-                         [percPovBreaks[4], demoColors[4]],
-                       ]
-                       },
-                      'fill-opacity': 0.9,
-											'fill-outline-color': '#6d6d51'
-                  }
-              });
-            // Add percent POC (areal weighting)
-            map.addLayer({
-              'id': 'perc_POC_aw',
-              'type': 'fill',
-              "source": {
-                type: 'vector',
-                url: 'mapbox://zstatmanweil.01gjua4s'
-              },
-              'layout': {
-                'visibility': 'none'
-                },
-              "source-layer": "pws_aw",
-                'paint': {
-                     'fill-color': {
-                       'property': 'perc_POC',
-                       'stops': [
-                         [percPOCBreaks[0], demoColors[0]],
-                         [percPOCBreaks[1], demoColors[1]],
-                         [percPOCBreaks[2], demoColors[2]],
-												 [percPOCBreaks[3], demoColors[3]],
-                         [percPOCBreaks[4], demoColors[4]],
-                       ]
-                       },
-                      'fill-opacity': 0.9,
-											'fill-outline-color': '#6d6d51'
-                  }
-              });
             // Add health violation data layer
             map.addLayer({
               'id': 'Health-based SDWA Violations',
@@ -300,10 +226,64 @@
 											'fill-outline-color': '#6d6d51'
                   }
               });
+            // Add percent below the poverty line (areal weighting)
+            map.addLayer({
+              'id': 'Percentage Below the Poverty Line (areal weighting)',
+              'type': 'fill',
+              "source": {
+                type: 'vector',
+                url: 'mapbox://zstatmanweil.01gjua4s'
+              },
+              'layout': {
+                'visibility': 'none'
+                },
+              "source-layer": "pws_aw",
+                'paint': {
+                     'fill-color': {
+                       'property': 'perc_pov',
+                       'stops': [
+                         [percPovBreaks[0], demoColors[0]],
+                         [percPovBreaks[1], demoColors[1]],
+                         [percPovBreaks[2], demoColors[2]],
+												 [percPovBreaks[3], demoColors[3]],
+                         [percPovBreaks[4], demoColors[4]],
+                       ]
+                       },
+                      'fill-opacity': 0.9,
+											'fill-outline-color': '#6d6d51'
+                  }
+              });
+            // Add percent POC (areal weighting)
+            map.addLayer({
+              'id': 'Percentage POC (areal weighting)',
+              'type': 'fill',
+              "source": {
+                type: 'vector',
+                url: 'mapbox://zstatmanweil.01gjua4s'
+              },
+              'layout': {
+                'visibility': 'none'
+                },
+              "source-layer": "pws_aw",
+                'paint': {
+                     'fill-color': {
+                       'property': 'perc_POC',
+                       'stops': [
+                         [percPOCBreaks[0], demoColors[0]],
+                         [percPOCBreaks[1], demoColors[1]],
+                         [percPOCBreaks[2], demoColors[2]],
+												 [percPOCBreaks[3], demoColors[3]],
+                         [percPOCBreaks[4], demoColors[4]],
+                       ]
+                       },
+                      'fill-opacity': 0.9,
+											'fill-outline-color': '#6d6d51'
+                  }
+              });
             
             // Add percent below the poverty line (county-level analysis)
             map.addLayer({
-              'id': 'perc_pov_county',
+              'id': 'Percentage Below the Poverty Line (county-level analysis)',
               'type': 'fill',
               "source": {
                 type: 'vector',
@@ -330,7 +310,7 @@
               });
             // Add percent POC (county-level analysis)
             map.addLayer({
-              'id': 'perc_POC_county',
+              'id': 'Percentage POC (county-level analysis)',
               'type': 'fill',
               "source": {
                 type: 'vector',
@@ -355,11 +335,24 @@
 											'fill-outline-color': '#6d6d51'
                   }
               });
-        });
 
+        // Settig up for Toggling between layers
+        var toggleableLayerIds = ['Total SDWA Violations', 
+                                  'Health-based SDWA Violations', 
+                                  'Percentage POC (areal weighting)', 
+                                  'Percentage Below the Poverty Line (areal weighting)', 
+                                  'Percentage POC (county-level analysis)', 
+                                  'Percentage Below the Poverty Line (county-level analysis)',  ];
+
+        // Associated breaks = 
+        var breakNames =[vioBreaks,
+                        healthVioBreaks,
+                        percPOCBreaksDisplay,
+                        percPovBreaksDisplay,
+                        percPOCBreaksCounty,
+                        percPovBreaksCounty
+                      ]                     
         // Toggle between layers
-        var toggleableLayerIds = [ 'Total SDWA Violations', 'Health-based SDWA Violations', 'perc_POC_aw', 'perc_pov_aw', 'perc_pov_county', 'perc_POC_county' ];
- 
         for (var i = 0; i < toggleableLayerIds.length; i++) {
           var id = toggleableLayerIds[i];
         
@@ -379,13 +372,57 @@
               map.setLayoutProperty(clickedLayer, 'visibility', 'none');
               this.className = '';
             } else {
+              // Turn off other layers and turn on selected layer 
+              var a = document.getElementById('menu').getElementsByTagName('a');
+              for (var j = 0; j < a.length; j++) {
+                  var elem = a[j];
+                  elem.className = '';
+              }
+    
+              // Turn on selected layer
+              map.setLayoutProperty(clickedLayer, 'visibility', 'visible')
               this.className = 'active';
-              map.setLayoutProperty(clickedLayer, 'visibility', 'visible');
-            }
+
+              // Remove any existing legend prior to adding one
+              $('.legend-key').remove();
+              $("#legend").find('span').remove()
+              
+              // Add legend for selected layer
+              // First select colors
+              if (clickedLayer.includes('Vio')){
+                var colors = vioColors;
+              } else {
+                var colors = demoColors;
+              }
+
+              // Select breaks for legend
+              var i = toggleableLayerIds.indexOf(clickedLayer);
+              var breaks = breakNames[i];
+              
+
+              // Add legend 
+              for (i = 0; i < breaks.length; i++) {
+                var layer = breaks[i];
+                var color = colors[i];
+                var item = document.createElement('div');
+                var key = document.createElement('span');
+                key.className = 'legend-key';
+                key.style.backgroundColor = color;
+
+                var value = document.createElement('span');
+                value.innerHTML = layer;
+                item.appendChild(key);
+                item.appendChild(value);
+                legend.appendChild(item);
+              };
+            };
         };
         
         var layers = document.getElementById('menu');
         layers.appendChild(link);
-        }
+        }   
+
+      });
+
         </script>
 {% endblock %}
